- when you alt-tab back into the script editor, the keyboard focus goes to the text box as expected
- when you Save As, the filename is filled in already with the current one
- renamed UDMF/Hexen activation stuff relating to projectiles because it's more correct and less confusing
- fixed crash when creating a new level with no resources selected and randomized textures
- hide matching texture sets with 0 textures in the texture browser
- additional logging for shader loading crashes

version 2.1.3.8
=====================
- fixed a bug with setting back sidedefs in the linedef edit window
- update to ACC 1.56
- fixed inconsistency with linedef info panel
- fixed heretic hanging moss things not hanging in 3d mode
- improved logging information
- cleanup for a bunch of compilation warnings left over from DB2 (should hopefully help prevent future bugs). some of this is based on MaxED's GZDoomBuilder code. may slightly improve performance.

version 2.1.3.6
=====================
- optional feature: instead of displaying the logo on startup, a tip or a hopefully helpful quote about mapping is displayed. you can disable this in the Tools -> Preferences -> Interface tab. if i quoted you and you want the quote removed (for any reason, no questions asked), feel free to contact me and i'll make sure to remove it in the next version.
- new hotkey for swapping upper/lower textures in classic 2d linedef mode. you have to set the hotkey yourself in the menu
- added flat scaling/rotation/panning stuff to EE-UDMF config for Edit Sector window
- fixed "upper/lower" being cut off sometimes in the linedef info panel if you had both checked.
- fixed a crash on changing map settings

version 2.1.3.4
=====================
- big optimizations to drawing new geometry, brand new algorithms for detecting inner sectors as well as splitting lines by vertices. please let me know if there are any issues.